--- a/V1.html
+++ b/V1.html
@@ -14,7 +14,7 @@
       <a-marker type='barcode' value='1'>
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura1.dae)">
+        collada-model="url(https://tecnoblasco.github.io//vistas/figuras/Figura1.dae)">
         </a-entity>
 
       </a-marker>
@@ -22,7 +22,7 @@
       <a-marker type='barcode' value='2' >
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura2.dae)">
+        collada-model="url(https://tecnoblasco.github.io//vistas/figuras/Figura2.dae)">
         </a-entity>
 
       </a-marker>
@@ -31,7 +31,7 @@
       <a-marker type='barcode' value='3' >
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura3.dae)">
+        collada-model="url(https://tecnoblasco.github.io//vistas/figuras/Figura3.dae)">
         </a-entity>
 
       </a-marker>
@@ -39,21 +39,21 @@
       <a-marker type='barcode' value='4'>
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura4.dae)">
+        collada-model="url(https://tecnoblasco.github.io/vistas/figuras/Figura4.dae)">
         </a-entity>
 
       </a-marker>
       <a-marker type='barcode' value='5'>
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura5.dae)">
+        collada-model="url(https://tecnoblasco.github.io/vistas/figuras/Figura5.dae)">
         </a-entity>
 
       </a-marker>
       <a-marker type='barcode' value='6'>
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura6.dae)">
+        collada-model="url(https://tecnoblasco.github.io/vistas/figuras/Figura6.dae)">
         </a-entity>
 
       </a-marker>
@@ -67,7 +67,7 @@
       <a-marker type='barcode' value='8'>
 
         <a-entity scale="3 3 3"
-        collada-model="url(https://glloret.github.io//vistas/figuras/Figura8.dae)">
+        collada-model="url(https://tecnoblasco.github.io/vistas/figuras/Figura8.dae)">
         </a-entity>
 
       </a-marker>
@@ -82,6 +82,20 @@
 
         <a-entity scale="3 3 3"
         collada-model="url(https://glloret.github.io//vistas/figuras/Figura10.dae)">
+        </a-entity>
+
+      </a-marker>
+      <a-marker type='barcode' value='11'>
+
+        <a-entity scale="3 3 3"
+        collada-model="url(https://glloret.github.io//vistas/figuras/Figura11.dae)">
+        </a-entity>
+
+      </a-marker>
+      <a-marker type='barcode' value='12'>
+
+        <a-entity scale="3 3 3"
+        collada-model="url(https://glloret.github.io//vistas/figuras/Figura12.dae)">
         </a-entity>
 
       </a-marker>
